dropIndexes will invariant if it sees complete indexes after successfully aborting a different index build

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.4.0-rc4, 4.7.0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • v4.4
    • Execution Team 2020-05-18
    • 22
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      An invariant can fail in dropIndexes given the following sequence between command threads A, B, and C:

      Part of the problem here is that index names are not unique to index builds, so while the dropIndexes command can successfully abort an index build, another index by the same name could be created again in a brief window of time before it reacquires its locks.

      In this scenario, we should consider dropping the finished index if we discover that it exists.  This was the previous behavior.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: