SERVER-47319 dropIndexes should not invariant if a similar index was created while yielding locks to abort different indexes